--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.24",
+    "tsup": "^7.1.0",
     "turbo": "latest",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
