--- a/turbo.json
+++ b/turbo.json
@@ -3,13 +3,19 @@
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**"],
+      "dependsOn": ["^build"]
     },
-    "lint": {},
+    "build:fast": {
+      "outputs": ["dist/**"],
+      "dependsOn": ["^build:fast"]
+    },
     "dev": {
+      "cache": false
+    },
+    "typecheck": {
       "cache": false,
-      "persistent": true
+      "dependsOn": ["^typecheck"]
     }
   }
 }
