--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "storybook:react": "storybook dev -p 6006 -c .react_storybook/.storybook",
     "storybook:vue": "storybook dev -p 6006 -c .vue_storybook/.storybook",
-    "build-storybook": "storybook build"
+    "build-storybook:react": "storybook build -c .react_storybook/.storybook",
+    "build-storybook:vue": "storybook build -c .vue_storybook/.storybook"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.24",
